gcc/testsuite/rust/rustc/ui/issues/issue-70724-add_type_neq_err_label-unwrap.rs
fn a() -> i32 {
    3
}

pub fn main() {
    assert_eq!(a, 0);
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
// { dg-error ".E0277." "" { target *-*-* } .-3 }
}

